; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_array.c_array_deinit.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_array.c_array_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.array = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @array_deinit(%struct.array* %0) #0 {
  %2 = alloca %struct.array*, align 8
  store %struct.array* %0, %struct.array** %2, align 8
  %3 = load %struct.array*, %struct.array** %2, align 8
  %4 = getelementptr inbounds %struct.array, %struct.array* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load %struct.array*, %struct.array** %2, align 8
  %10 = getelementptr inbounds %struct.array, %struct.array* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.array*, %struct.array** %2, align 8
  %15 = getelementptr inbounds %struct.array, %struct.array* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @nc_free(i32* %16)
  br label %18

18:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @nc_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
